--- a/loginpage.css
+++ b/loginpage.css
@@ -16,4 +16,7 @@ body{
     border-style:bold;
     border:5px;
     text-align:center;
+    padding-left: 25%;;
+    padding-right:25%;
+    margin-top: 380px;
 }
