--- a/loginpage.css
+++ b/loginpage.css
@@ -4,10 +4,10 @@
 
 #title{
     color:white;
-    background-color:blue;
+    background-color:rgb(0,124,255);
     text-align:center;
-    padding-top:5px;
-    padding-bottom:5px;
+    padding-top:10px;
+    padding-bottom:10px;
 }
 
 
