--- a/loginpage.css
+++ b/loginpage.css
@@ -21,9 +21,16 @@ body{
     text-align:center;
     padding-left: 25%;;
     padding-right:25%;
-    margin-top: 380px;
+    margin-top: 30px;
+
 }
 
 #login {
     text-align: center;
+}
+
+#yeargroup {
+    text-align: center;
+    border-style: ridge;
+
 }
