--- a/loginpage.css
+++ b/loginpage.css
@@ -3,13 +3,9 @@
 }
 
 #title{
-    color:white;
-    background-color:rgb(0,124,255);
-    text-align:center;
-    padding-top:10px;
-    padding-bottom:10px;
+    font-size:35px ;
+    text-align: center;
 }
-
 
 body{
     background-color:#e3f2fd;
@@ -18,7 +14,7 @@ body{
 #below{
     border-style:bold;
     border:5px;
-    text-align:center;
+    text-align: center;
     padding-left: 25%;;
     padding-right:25%;
     margin-top: 30px;
@@ -31,6 +27,4 @@ body{
 
 #yeargroup {
     text-align: center;
-    border-style: ridge;
-
 }
