--- a/Year 7/yr7homepage.css
+++ b/Year 7/yr7homepage.css
@@ -7,10 +7,9 @@ body{
     text-align: center;
 }
 
-#logout{
-
-}
-
-#logouticon{
-    position: right;
+.info{
+    text-align:center;
+    margin-left: 20%;
+    margin-right:20%;
+    color:rgb(39, 39, 39)
 }
