--- a/Year 7/yr7homepage.css
+++ b/Year 7/yr7homepage.css
@@ -14,6 +14,37 @@ body{
     color:rgb(39, 39, 39)
 }
 
+#move{
+    text-align:center;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button {
+    background-color: #e3f2fd; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  .button:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+  
+
 #video{
     text-align: center;
     padding-bottom:10px;
