--- a/Year 8/yr8homepage.css
+++ b/Year 8/yr8homepage.css
@@ -1,3 +1,50 @@
 body{
     background-color:#e3f2fd;
 }
+
+#title{
+    font-size:35px ;
+    text-align: center;
+}
+
+#welcome{
+    margin-top:20px;
+    text-align: center;
+}
+
+.info{
+    text-align:center;
+    margin-left: 20%;
+    margin-right:20%;
+    color:rgb(39, 39, 39)
+}
+
+#move{
+    text-align:center;
+}
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button {
+    background-color: #e3f2fd; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  .button:hover {
+    background-color: #008CBA;
+    color: white;
+  }
