--- a/Year 7/yr7eng.css
+++ b/Year 7/yr7eng.css
@@ -12,3 +12,9 @@ body{
     text-align: center;
     margin-top: 20px;
 }
+
+.quiz {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
